--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^18.0.6",
     "aptos": "^1.3.16",
     "buffer": "^6.0.3",
-    "json-rpc-protocol": "^0.13.2",
+    "msafe-iframe": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
