--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@manahippo/aptos-wallet-adapter": "^1.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,11 +11,12 @@
     "@types/node": "^16.11.68",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "aptos": "^1.3.16",
+    "aptos": "^1.4.0",
     "buffer": "^6.0.3",
-    "msafe-iframe": "^1.0.8",
+    "msafe-iframe": "^1.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
