--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@manahippo/aptos-wallet-adapter": "^1.0.3",
+    "@manahippo/aptos-wallet-adapter": "1.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "aptos": "^1.4.0",
     "buffer": "^6.0.3",
-    "msafe-iframe": "^1.1.5",
+    "msafe-iframe": "^1.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
