use msafe-wallet

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "aptos": "^1.4.0",
     "buffer": "^6.0.3",
-    "msafe-iframe": "^1.1.6",
+    "msafe-wallet": "^1.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
